methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:7: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
        faireV()
              ^